<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/username_default"
        android:inputType="textCapWords"
        android:key="username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/username_desc"
        android:title="@string/username" />
    <EditTextPreference
        android:defaultValue="@string/password_default"
        android:key="password_k"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/password_desc"
        android:title="@string/password" />
    <EditTextPreference
        android:defaultValue="@string/ip_default"
        android:key="ip_k"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/ip_desc"
        android:title="@string/ip" />
    <EditTextPreference
        android:defaultValue="@string/port_default"
        android:key="port_k"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/port_desc"
        android:title="@string/port" />

</PreferenceScreen>
